<resources>
    <string name="app_name">WeightlyApp</string>
    <string name="title_home">Weightly</string>
    <string name="title_splash">Splash</string>
    <string name="title_on_boarding">On Boarding</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add_weight">Add Weight</string>
    <string name="title_settings">Settings</string>

    <string name="history">History</string>
    <string name="see_all"><u>See All</u></string>

    <string name="add_weight">Add Weight</string>
    <string name="select_date">Select Date</string>
    <string name="input_weight">Input weight</string>
    <string name="input_note">Input note</string>
    <string name="goal_weight">Goal weight</string>
    <string name="current_weight">Current weight</string>
    <string name="enter_current_weight">Enter current weight</string>
    <string name="save">Save</string>

    <string name="prev_day">Previous</string>
    <string name="next_day">Next</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_emoji">Emojis</string>
    <string name="select_emoji">Select emoji</string>
    <string name="select_emoji_with_emoji_format">%1$s Select emoji</string>

    <string name="_continue">Continue</string>

    <string name="title_min_weight">Minimum</string>
    <string name="title_max_weight">Maximum</string>
    <string name="title_average_weight">Average</string>


    <string name="start">Start</string>
    <string name="goal">Goal</string>
    <string name="current">Current</string>

    <string name="title_history">History</string>

    <string name="summary">Summary</string>
    <string name="enter_current_height">Enter current height</string>
    <string name="enter_current_age">Enter current age</string>
    <string name="enter_goal_weight">Enter goal/desired weight</string>

    <string name="cm">cm</string>
    <string name="age"> </string>

    <string name="delete">Delete</string>

    <string name="settings">Settings</string>

    <string name="lists">List</string>

    <string name="development">Development</string>
    <string name="developer">Developer</string>
    <string name="source_code">Source Codes</string>

    <string name="your_progress">Your progress</string>
    <string name="diet_list">Diet List</string>

    <string name="line_chart">Line</string>
    <string name="bar_chart">Bar</string>

    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>

    <string name="welcome_to_weightly">Welcome to Weightly</string>

    <string name="alert_current_weight_must_different_with_goal_weight">Your current weight should be different from your target weight 🥳 </string>

    <string name="kg_format" translatable="false">%1$s kg</string>
    <string name="lb_format" translatable="false">%1$s lb</string>

    <string name="kg" translatable="false">kg</string>
    <string name="lbs" translatable="false">lb</string>
    <string name="general">General</string>
    <string name="unit">Unit</string>

    <string name="chart">Chart</string>
    <string name="show_limit_lines">Show limit lines</string>

    <string name="title_no_weight">Add weight from the plus button on the top right</string>
    <string name="alert_blank_weight">Please make sure to input your weight</string>
    <string name="welcome_description">Hello 🥳 Please fill in your information to start 🚀</string>
    <string name="alert_weight_bigger_than_zero">Your weight should be greater than 0 🥳 </string>

    <string name="show_limit_lines_summary">See the goal and the average weight on the graph chart</string>
    <string name="rate_us_from_google_play">Rate us on Google Play</string>
    <string name="goal_summary_format">%.1f %s left until you reach the goal</string>

    <string name="female" translatable="false">Female</string>
    <string name="male" translatable="false">Male</string>
</resources>