<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/chart">

        <CheckBoxPreference
            android:title="@string/show_limit_lines"
            android:defaultValue="true"
            app:icon="@drawable/ic_baseline_show_chart_24"
            android:summary="@string/show_limit_lines_summary"
            android:key="show_limit_lines" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">
        <ListPreference
            app:defaultValue="English"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_entries"
            app:key="unit"
            app:icon="@drawable/ic_baseline_bookmark_24"
            app:title="@string/unit"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="weight"
            app:icon="@drawable/baseline_monitor_weight_24"
            app:title="Goal Weight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/feedback">

        <Preference
            app:key="send_feedback"
            app:icon="@drawable/ic_baseline_feedback_24"
            app:title="@string/send_feedback" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/development">

        <Preference
            app:key="developer"
            app:icon="@drawable/ic_baseline_person_outline"
            app:title="@string/developer" />

        <Preference
            app:key="source_code"
            app:icon="@drawable/ic_baseline_code_24"
            app:title="@string/source_code" />

    </PreferenceCategory>

</PreferenceScreen>