<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@drawable/baseline_run"
        android:title="Run"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:title="@string/lists"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_weight"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="always" />


</menu>